# services/fuel.js
@@ -3,6 +3,8 @@ const db = require("../utils/database");
 const Fuel = require("../Models/fuel");
 
 exports.getFuels = (req, res, next) => {
+  // #swagger.tags = ['Combustivel']
+  // #swagger.description = 'Endpoint para obter um combustivel. Precisa de autorização'
   Fuel.findAll()
     .then((resp) => {
       res.status(200).json(resp);
@@ -11,6 +13,8 @@ exports.getFuels = (req, res, next) => {
 };
 
 exports.createFuel = (req, res, next) => {
+  // #swagger.tags = ['Combustivel']
+  // #swagger.description = 'Endpoint para Criar um combustivel.'
   const errors = validationResult(req);
   if (!errors.isEmpty()) {
     return res.status(422).json({
